discussion/kv_engine/164050/164050_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Improve LoadStorageKVPairCallback::callback logging

Improve the logging in LoadStorageKVPairCallback::callback, so its clear
which function the log message is from and what vbucket we're loading
for. As currently we can just have repeated log message that give no
context to which vbucket there for.

Change-Id: If3828e0444393eb855b8d039ca995309f05c34d1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-10-21 09:53:22.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-21 10:03:58.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35078/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/warmup.cc:1006:37:
error: use of undeclared identifier "vbucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35078/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41287/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/warmup.cc(1002): error C2065: "vbucket": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41287/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13589/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1006:37: error: use of undeclared identifier "vbucket" [clang-diagnostic-error]
                                    vbucket.getId());
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1013:33: error: use of undeclared identifier "vbucket" [clang-diagnostic-error]
                                vbucket.getId());
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1020:29: error: use of undeclared identifier "vbucket" [clang-diagnostic-error]
                            vbucket.getId());
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1029:25: error: use of undeclared identifier "vbucket" [clang-diagnostic-error]
                        vbucket.getId(),
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1085:17: error: use of undeclared identifier "vbucket" [clang-diagnostic-error]
                vbucket.getId());
                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13589/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1006:37:
error: use of undeclared identifier "vbucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13589/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3224/ : FAILURE

Compile error at [2021-10-21T09:54:42.437Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/warmup.cc:1006:37:
error: use of undeclared identifier "vbucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3224/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14360/ : FAILURE

Compile error at [2021-10-21T09:56:04.907Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/warmup.cc:1006:37:
error: use of undeclared identifier "vbucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14360/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15201/ : FAILURE

Compile error at [2021-10-21T09:56:02.368Z] ../kv_engine/engines/ep/src/warmup.cc:1006:37:
error: ?vbucket? was not declared in this scope; did you mean ?vbuckets??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15201/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15480/ : FAILURE

Compile error at [2021-10-21T09:55:48.836Z] ../kv_engine/engines/ep/src/warmup.cc:1006:37:
error: ?vbucket? was not declared in this scope; did you mean ?vbuckets??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15480/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16144/ : FAILURE

Compile error at [2021-10-21T09:54:25.366Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/warmup.cc:1006:37:
error: use of undeclared identifier "vbucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16144/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23527/ : FAILURE

Compile error at [2021-10-21T09:55:21.213Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/warmup.cc:1006:37:
error: use of undeclared identifier "vbucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23527/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3294/ : FAILURE

Compile error at [2021-10-21T10:00:47.181Z] ../kv_engine/engines/ep/src/warmup.cc:1006:37:
error: ?vbucket? was not declared in this scope; did you mean ?vbuckets??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3294/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12388/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
